# beco

./: .rendezvous.env  .sst.env  .user.env  .user2.env  .validator.env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
grpc/: Cargo.toml  README.md  start.sh
grpc/proto/: main.proto
grpc/src/: config.rs  entry.rs  grpc.rs  main.rs  orchestrator.rs  rendezvous.rs  server.rs  sst.rs  user_grpc.rs  utils.rs  validator.rs
grpc/src/chain/: chain_custody.rs
grpc/src/chain/tests/: chain_custody.rs  mod.rs
grpc/src/db/: config.rs  mod.rs
grpc/src/db/queries/: leaf.rs  merkle.rs  mod.rs  transaction.rs  user.rs
grpc/src/enums/: blockchain.rs  data_value.rs  mod.rs  oragnisaton_relation.rs  permission_model_operation.rs  user_request_type.rs  value_reference.rs
grpc/src/errors/: key.rs  mod.rs  user.rs
grpc/src/evm/: mod.rs
grpc/src/implement/: add_account_request.rs  add_user_request.rs  list_user_request.rs  mod.rs  modify_linked_user_request.rs  modify_name_request.rs  modify_other_names_request.rs
grpc/src/merkle/: mod.rs  transaction.rs
grpc/src/orchestrator/: mod.rs
grpc/src/organisation/: mod.rs  user_organisation.rs
grpc/src/p2p/: behaviour.rs  config.rs  mod.rs  rendezvous_config.rs  rendezvous_swarm.rs  sst_swarm.rs  user_sst_validator_swarm.rs  user_swarm.rs  validator_swarm.rs
grpc/src/permissioms/: model.rs
grpc/src/permissioms/tests/: model.rs
grpc/src/permissions/: model.rs
grpc/src/permissions/tests/: model.rs
grpc/src/proto/: beco.rs  mod.rs
grpc/src/requests/: user_request.rs
grpc/src/response/: mod.rs
grpc/src/state/: mod.rs
grpc/src/traits/: key.rs  value.rs
grpc/src/user/: public_user.rs  user.rs  user_details.rs
grpc/src/user/tests/: mod.rs  user.rs  user_details.rs
grpc/src/xrpl/: mod.rs
init_db/: 001.sql
proto/: main.proto  wallet.proto
src/: keys.rs  main.rs  server.rs  test.rs  user.rs  wallet.rs
src/chain/: chain_custody.rs  chain_user.rs  mod.rs  test_chain_custody.rs  test_chain_user.rs
src/chain/tests/: chain_custody.rs
src/enums/: blockchain.rs  cypto_algortihms.rs  mod.rs
src/errors/: key.rs  permission.rs
src/evm/: mod.rs
src/permissioms/: mod.rs  model.rs
src/permissioms/tests/: model.rs
src/proto/: beco.rs
src/response/: mod.rs
src/traits/: key.rs  mod.rs  value.rs
src/user/: mod.rs  public_user.rs  test_chain_user.rs  user.rs  user_details.rs
src/user/tests/: user.rs  user_details.rs
src/xrpl/: mod.rs  test.rs
user-dns/: Cargo.toml
user-dns/src/: main.rs
user-dns/src/errors/: location.rs
user-dns/src/location/: mod.rs
user-dns/src/tree/: edge.rs  mod.rs  node.rs
user-dns/src/tree/test/: edge.rs  node.rs
