[package]
name = "beco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = {  version = "0.25.0", features = ["derive"] }
xrpl-rust = { version = "0.2.0" }
ecdsa = { version = "0.16.7" }
k256 = { version = "0.13.1" }