[package]
name = "beco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc"
path = "src/grpc.rs"
required-features = ["grpc"]

[[bin]]
name = "validator"
path = "src/validator.rs"
required-features = ["validator"]

# sst - Single Source of Truth
[[bin]]
name = "sst"
path = "src/sst.rs"
required-features = ["sst"]

[[bin]]
name = "rendezvous"
path = "src/rendezvous.rs"
required-features = ["rendezvous"]

[features]
# default = ["grpc"]
grpc = []
validator = []
sst = []
rendezvous = []

[dependencies]
strum = {  version = "0.25.0", features = ["derive"] }
xrpl-rust = { version = "0.2.0" }
ecdsa = { version = "0.16.7" }
k256 = { version = "0.13.1" }
tonic = { version = "0.10.0" }
prost = { version = "0.12.0" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }
tonic-reflection = { version = "0.10.0" }
libp2p = { version = "0.52.2", features = ["tcp", "mdns", "tokio", "identify", "gossipsub", "noise", "yamux", "ping", "pnet", "macros", "rendezvous"] }
regex = { version = "1.9.3" }
either = { version = "1.9.0" }
futures = { version = "0.3.28" }
serde_json = { version = "1.0.105", features = [ "std" ] }
serde = { version = "1.0.187", features = [ "derive" ] }
event-listener = { version = "3.0.0" }
chrono = { version = "0.4.26", features = [ "serde" ]}
void = { version = "1.0.2" }
rs_merkle = { version = "1.4.1" }

[build-dependencies]
tonic-build = { version = "0.10.0" }